# gama

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AutOL_cash.py  AutOL_plots.py  AutOL_streams.py  AutOL_streams_Model_store.py  AutOL_streams_ensemble.py  Auto_OL.py  CITATION.cff  GPAML.py  GamaClassifier.py  GamaRegressor.py  LICENSE  OAML-UserGuide  OAML_basic.py  OAML_ensemble.py  OAML_modelstore.py  Partial_fit_experiments.py  README.md  StackingTransformer.py  Streams.py  __init__.py  async_gp.py  automl_gp.py  citing.html  code_of_conduct.md  codecov.yml  configuration.py  contributing.html  example_new.py  example_old.py  exploration.py  gama.py  gama_exceptions.py  gama_hof.py  (+22 more)
.doctrees/: citing.doctree  contributing.doctree  environment.pickle  index.doctree  releases.doctree
.doctrees/api/: gamaclassifier.doctree  gamaregressor.doctree  index.doctree
.doctrees/contributing/: contributing.doctree  index.doctree
.doctrees/technical_guide/: automl_pipeline.doctree  events.doctree  index.doctree  logging.doctree  visualization.doctree
.doctrees/user_guide/: automl_pipeline.doctree  configuration.doctree  examples.doctree  hyperparameters.doctree  index.doctree  installation.doctree  related_packages.doctree  things_to_know.doctree  visualization.doctree
.github/workflows/: build-docs.yaml  changelog.yaml  precommit.yaml  publish.yaml  pypi.yaml  pytest.yaml  test-with-pre.yaml  test.sh  version-bump.sh
_modules/: index.html
_modules/gama/: GamaClassifier.html  GamaRegressor.html  gama.html  postprocessing.html  utilities.html
_sources/: citing.rst.txt  contributing.rst.txt  index.rst.txt  releases.rst.txt
_sources/api/: gamaclassifier.rst.txt  gamaregressor.rst.txt  index.rst.txt
_sources/contributing/: contributing.rst.txt
_sources/user_guide/: automl_pipeline.rst.txt  configuration.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  (+2 more)
_static/: documentation_options.js
api/: gamaclassifier.html  gamaregressor.html  index.html
ci_script_check/: objects.inv
ci_scripts/: after_success.sh  build_docs.sh  install.sh  script.sh
contributing/: contributing.html  index.html
data/: GAMA_20_2_1.csv
data_streams/: electricity-normalized.arff
develop/: .buildinfo  benchmark.html  citing.html  genindex.html  index.html  objects.inv  py-modindex.html  releases.html  search.html  searchindex.js
docs/: basics.md  configuration.md
ea/: async_gp.py  automl_gp.py  evaluation.py  mutation.py
examples/: arff_clustering_example.py  arff_example.py  classification_example.py  clustering_example.py  main.py  regression_example.py
gama/: GamaClassifier.py  GamaCluster.py  GamaRegressor.py  GamaTimeSeriesClassifier.py  GamaTimeSeriesForecaster.py  __init__.py  __version__.py  data.py  data_formatting.py  data_loading.py  gama.py
master/: .buildinfo  benchmark.html  citing.html  genindex.html  index.html  objects.inv  py-modindex.html  releases.html  search.html  searchindex.js
notebooks/: GAMA Log Parser.ipynb
oaml_paper/: AutOL_plots.py  Baseline_chacha.py  Streams.py  Streams_batch.py  plot.ipynb  run_streams.sh
paper/: paper.bib  paper.json  paper.md
results/: results_HAT_0.txt  results_HAT_1.txt  results_HAT_3.txt  results_HAT_4.txt  results_HAT_5.txt  results_HAT_6.txt  results_LeverageBagging_0.txt  results_LeverageBagging_1.txt  results_LeverageBagging_3.txt  results_LeverageBagging_4.txt  results_LeverageBagging_5.txt  results_LeverageBagging_6.txt  results_asha_5.txt  results_basic_1.txt  results_basic_3.txt  results_chacha_0.txt  results_chacha_4.txt  results_chacha_6.txt  results_ensemble_1.txt  results_ensemble_3.txt  results_ensemble_5.txt  results_ensemble_6.txt  results_modelstore_0.txt  results_modelstore_1.txt  results_modelstore_3.txt  results_modelstore_4.txt  results_modelstore_5.txt  results_modelstore_6.txt  results_randomsearch_3.txt  results_randomsearch_5.txt  results_randomsearch_6.txt
scripts/: benchmark.py  grammar.py
source_generated/: gama.configuration.rst  gama.ea.rst  gama.rst  gama.utilities.rst  modules.rst
technical_guide/: automl_pipeline.html  events.html  index.html  logging.html  visualization.html
tests/: conftest.py  test_automl_gp.py  test_gama.py  tests.py
user_guide/: automl_pipeline.html  configuration.html  dashboard.html  examples.html  hyperparameters.html  index.html  installation.html  related_packages.html  things_to_know.html  visualization.html
utilities/: __init__.py  auto_ensemble.py  function_dispatcher.py  observer.py  pretty_string_methods.py  stopwatch.py
visualization/: Visualizer.py
(+716 files in other folders)
